--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/skeleton.css">
     <link rel="stylesheet" href="./css/custom.css">
-    
+
 </head>
 <body>
     <header class="header" id="header">
@@ -71,6 +71,97 @@
         </div>
     </div>
 
-    <div class="barra"></div>
+    <div class="barra">
+        <div class="container">
+            <div class="row">
+                <div class="four columns icono icono1">
+                    <p>200 marcas de cafe <br>
+                        Explora los sabores mas recientes
+                    </p>
+                </div>
+
+                <div class="four columns icono icono2">
+                    <p>Expertos en cafe<br>
+                        Explora los distintos sabores
+                    </p>
+                </div>
+
+                <div class="four columns icono icono3">
+                    <p>Grano de calidad<br>
+                        100% Natural
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="lista-cafe" class="container">
+
+        <h1 id="encabezado" class="encabezado">Pedidos en linea</h1>
+
+        <div class="row">
+
+            <div class="four columns">
+                <div class="card">
+                    <img src="./img/coffee1.jpg" class="u-full-width" alt="coffee">
+                    <div class="info-card">
+                        <h4>cafe negro</h4>
+                        <p>marca nesca</p>
+                        <img src="./img/estrellas.png" alt="">
+                        <p class="precio">200<span class="u-pull-right">$15</span></p>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito">Agregar al carrito</a>
+                    </div>
+                </div>
+            </div>
+            <div class="four columns">
+                <div class="card">
+                    <img src="./img/coffee1.jpg" class="u-full-width" alt="coffee">
+                    <div class="info-card">
+                        <h4>cafe negro</h4>
+                        <p>marca nesca</p>
+                        <img src="./img/estrellas.png" alt="">
+                        <p class="precio">200<span class="u-pull-right">$15</span></p>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito">Agregar al carrito</a>
+                    </div>
+                </div>
+            </div>
+            <div class="four columns">
+                <div class="card">
+                    <img src="./img/coffee1.jpg" class="u-full-width" alt="coffee">
+                    <div class="info-card">
+                        <h4>cafe negro</h4>
+                        <p>marca nesca</p>
+                        <img src="./img/estrellas.png" alt="">
+                        <p class="precio">200<span class="u-pull-right">$15</span></p>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito">Agregar al carrito</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <footer id="footer" class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="four columns">
+                    <nav id="principal" class="menu">
+                        <a href="#" class="enlace">Gg negocio</a>
+                        <a href="#" class="enlace">Conviertete en socio</a>
+                        <a href="#" class="enlace">Aplicacion Movil</a>
+                        <a href="#" class="enlace">Favoritos</a>
+                    </nav>
+                </div>
+                <div class="four columns">
+                    <nav id="Segundaria" class="menu">
+                        <a href="#" class="enlace">¿Quienes somos?</a>
+                        <a href="#" class="enlace">Empleo</a>
+                        <a href="#" class="enlace">Blog</a>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </footer>
+<script src="./js/scripts.js"></script>
 </body>
 </html>
