--- a/index.html
+++ b/index.html
@@ -12,81 +12,77 @@
 </head>
 <body>
     <header class="header" id="header">
-        <div class="container">
-            <div class="row">
+            <div class="nav-hero container">
 
-                <div class="four columns">
-                    <img src="./img/logo.png" alt="" id="logo">
+                <div class="logo__page">
+                    <img src="./img/logoCafe.png" alt="" id="logo" class="logo">
+                    <div class="text__tittle">Cafesito </div>
                 </div>
 
-                <div class="two columns u-pull-right">
+                <div class="menu-despegable">
                     <ul>
                         <li class="submenu">
-                            <img src="./img/cart.png" alt="" id="img-carrito">
+                            <img src="./img/cart.png" alt="" id="img-carrito" class="carrito">
                             <div id="carrito">
                                 <table>
                                     <thead>
                                         <tr>
-                                            <th>Imagen</th>
                                             <th>Nombre</th>
                                             <th>Precio</th>
-                                            <th></th>
                                         </tr>
+                                        <tr class="linea"></tr>
                                     </thead>
                                     <tbody></tbody>
                                 </table>
-                                <a href="#" id="vaciar-carrito" class="button u-full-width">Vaciar carrito</a>
+                                <a href="#" id="vaciar-carrito" class="buttom btn-vaciar-carrito">Vaciar carrito</a>
                             </div>
                         </li>
                     </ul>
                 </div>
-                <div class="row">
-                    <div class="four columns">
+
+                <div class="nav-items">
                         <ul class="navct">
                             <li class="four columns"><a href="#">Inicio</a></li>
                             <li class="four columns"><a href="#">Sobre</a></li>
                             <li class="four columns"><a href="#">Contacto</a></li>
                         </ul>
-                    </div>
                 </div>
 
             </div>
-        </div>
     </header>
 
     <div id="hero">
         <div class="container">
-            <div class="row">
-                <div class="six-columns">
-                    <div class="contenido-hero">
-                        <h2>Pide tu cafee</h2>
-                        <p>Todos los cafes a $15</p>
-                        <form action="#" id="busqueda" class="formulario" method="post">
-                            <input type="text" class="u-full-width" id="buscador" placeholder="Que te gustaria comprar">
-                            <input type="submit" id="submit-buscador" class="submit-buscador" >
-                        </form>
-                    </div>
-                </div>
+            <div class="contenido-hero">
+                <h2>Pide tu cafee</h2>
+                <p>Todos los cafes a $15</p>
+                <form action="#" id="busqueda" class="formulario" method="post">
+                    <input type="text" class="u-full-width" id="buscador" placeholder="Que te gustaria comprar">
+                    <input type="submit" id="submit-buscador" class="submit-buscador" >
+                </form>
             </div>
         </div>
     </div>
 
     <div class="barra">
         <div class="container">
-            <div class="row">
-                <div class="four columns icono icono1">
+            <div class="row-icono">
+                <div class="display-icono">
+                    <img src="./img/icono1.png" alt="coffe" class="icono">
                     <p>200 marcas de cafe <br>
                         Explora los sabores mas recientes
                     </p>
                 </div>
 
-                <div class="four columns icono icono2">
+                <div class="display-icono">
+                    <img src="./img/icono2.png" alt="" class="icono">
                     <p>Expertos en cafe<br>
                         Explora los distintos sabores
                     </p>
                 </div>
 
-                <div class="four columns icono icono3">
+                <div class="display-icono">
+                    <img src="./img/icono3.png" alt="" class="icono">
                     <p>Grano de calidad<br>
                         100% Natural
                     </p>
@@ -99,69 +95,49 @@
 
         <h1 id="encabezado" class="encabezado">Pedidos en linea</h1>
 
-        <div class="row">
-
-            <div class="four columns">
-                <div class="card">
-                    <img src="./img/coffee1.jpg" class="u-full-width" alt="coffee">
-                    <div class="info-card">
-                        <h4>cafe negro</h4>
-                        <p>marca nesca</p>
-                        <img src="./img/estrellas.png" alt="">
-                        <p class="precio">200<span class="u-pull-right">$15</span></p>
-                        <a href="#" class="u-full-width button-primary button input agregar-carrito">Agregar al carrito</a>
-                    </div>
-                </div>
-            </div>
-            <div class="four columns">
-                <div class="card">
-                    <img src="./img/coffee1.jpg" class="u-full-width" alt="coffee">
-                    <div class="info-card">
-                        <h4>cafe negro</h4>
-                        <p>marca nesca</p>
-                        <img src="./img/estrellas.png" alt="">
-                        <p class="precio">200<span class="u-pull-right">$15</span></p>
-                        <a href="#" class="u-full-width button-primary button input agregar-carrito">Agregar al carrito</a>
-                    </div>
-                </div>
-            </div>
-            <div class="four columns">
-                <div class="card">
-                    <img src="./img/coffee1.jpg" class="u-full-width" alt="coffee">
-                    <div class="info-card">
-                        <h4>cafe negro</h4>
-                        <p>marca nesca</p>
-                        <img src="./img/estrellas.png" alt="">
-                        <p class="precio">200<span class="u-pull-right">$15</span></p>
-                        <a href="#" class="u-full-width button-primary button input agregar-carrito">Agregar al carrito</a>
-                    </div>
-                </div>
+        <div class="cards">
             </div>
 
-        </div>
+    </div>
+
     </div>
 
     <footer id="footer" class="footer">
         <div class="container">
-            <div class="row">
-                <div class="four columns">
-                    <nav id="principal" class="menu">
-                        <a href="#" class="enlace">Gg negocio</a>
-                        <a href="#" class="enlace">Conviertete en socio</a>
-                        <a href="#" class="enlace">Aplicacion Movil</a>
-                        <a href="#" class="enlace">Favoritos</a>
-                    </nav>
+            <div class="footer-grid">
+                <div class="footer-logo">
+                    <img src="./img/logoCafe.png" alt="" class="logo center">
+                    <div class="derechos center">Todos los derechos reservados © 2022</div>
+                    <div class="redes center">
+                        <a href="#"><img src="./img/instagram.svg" alt="" class="redes-sociales"></a>
+                        <a href="#"><img src="./img/tiktok.svg" alt="" class="redes-sociales"></a>
+                        <a href="#"><img src="./img/twitter.svg" alt="" class="redes-sociales"></a>
+                    </div>
                 </div>
-                <div class="four columns">
-                    <nav id="Segundaria" class="menu">
-                        <a href="#" class="enlace">¿Quienes somos?</a>
-                        <a href="#" class="enlace">Empleo</a>
-                        <a href="#" class="enlace">Blog</a>
-                    </nav>
+                <div class="informacion">
+                    <div class="footer-contacto">
+                        <div class="footer-info">Informacion</div>
+                        <nav id="principal" class="menu">
+                            <a href="#" class="enlace">Negocio Cafe</a>
+                            <a href="#" class="enlace">Conviertete en socio</a>
+                            <a href="#" class="enlace">Aplicacion Movil</a>
+                            <a href="#" class="enlace">Favoritos</a>
+                        </nav>
+                    </div>
+                    <div class="footer-contacto">
+                        <div class="footer-info">Contacto</div>
+                        <nav id="Segundaria" class="menu">
+                            <a href="#" class="enlace">¿Quienes somos?</a>
+                            <a href="#" class="enlace">Empleo</a>
+                            <a href="#" class="enlace">Blog</a>
+                        </nav>
+                    </div>
                 </div>
             </div>
         </div>
     </footer>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="./js/ApI.js"></script>
 <script src="./js/scripts.js"></script>
 </body>
 </html>
