fix-table-produts

--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
                 <div class="menu-despegable">
                     <ul>
                         <li class="submenu">
-                            <img src="./img/cart.png" alt="" id="img-carrito" class="carrito">
-                            <div id="carrito">
+                            <div class="carrito-shop">
+                                <img src="./img/cart.png" alt="" id="img-carrito" class="carrito">
+                                <div class="contador count-Cart">
+                            </div>
+                            </div>
+                            <div id="carrito" class="table-scroll">
                                 <table>
                                     <thead>
                                         <tr>
@@ -95,7 +99,7 @@
 
         <h1 id="encabezado" class="encabezado">Pedidos en linea</h1>
 
-        <div class="cards">
+        <div class="cards card-products">
             </div>
 
     </div>
