--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
 
         <div class="cards card-products">
             </div>
+        
+            <div id="myModal" class="modal">
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                  <h1>Producto agregado</h1>
+                  <p>¡Tu producto ha sido agregado con éxito!</p>
+                </div>
+              </div>
 
     </div>
 
